@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
   
+  26 Jan 2005; Preston Cody <codeman@gentoo.org>
+  pretend now a runtime question.
+  
   25 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Fixed set_additional_users()
 
